<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="information"
            type="com.example.guessnumberfragment.data.Information" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".iu.ConfigFragment">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:hint="@string/etNombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={information.usuario}"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etNumeroIntentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:hint="@string/etNumeroIntentos"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={information.intentos}"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:onClick="config"
            android:id="@+id/btnComenzar"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnJugar" />
    </LinearLayout>
</layout>